<resources>
    <string name="default_web_client_id" translatable="false">558083145632-fbhjb8j1k4m8r14ui97shd9dnng0rlum.apps.googleusercontent.com</string>
    <string name="app_name">KodaHosting</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="system_default">System Default</string>
    <string name="danger_zone">DANGER ZONE</string>
    <string name="export_as_zip">EXPORT AS ZIP</string>
    <string name="hibernate">HIBERNATE</string>
    <string name="wake_up">WAKE UP</string>
    <string name="status_online">ONLINE</string>
    <string name="status_offline">OFFLINE</string>
    <string name="status_starting">STARTING</string>
    <string name="status_stopping">STOPPING</string>
    <string name="status_restarting">RESTARTING</string>
    <string name="status_setting_up">SETTING UP</string>
    <string name="status_crashed">CRASHED</string>
    <string name="status_installing">INSTALLING</string>
    <string name="status_hibernated">HIBERNATED</string>
    <string name="players">players</string>
    <string name="start">START</string>
    <string name="stop">STOP</string>
    <string name="minecraft_account">MINECRAFT ACCOUNT</string>
    <string name="select_language">SELECT LANGUAGE</string>
<string name="link_minecraft_instructions">Link your Minecraft account to enable /join</string>
<string name="not_linked">Not linked</string>
<string name="link_steps">1. Click \'Link Account\'\n2. Join lobby.kodanetwork.eu (or .kodaserv.eu)\n3. Type /link &lt;code&gt;</string>
<string name="link_new_account">Link New Account</string>
<string name="appearance">APPEARANCE</string>
<string name="theme_mode">Theme Mode</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_light">Light</string>
    <string name="theme_light_purple">Light Custom</string>
    <string name="theme_auto">Auto</string>
<string name="haptic_feedback">Haptic Feedback</string>
<string name="on">ON</string>
<string name="off">OFF</string>
<string name="screensaver">SCREENSAVER</string>
<string name="style">Style</string>
<string name="squares">Squares</string>
<string name="black">Black</string>
<string name="afk_timeout">AFK Timeout</string>
<string name="min_1">1 Min</string>
<string name="min_2">2 Min</string>
<string name="min_5">5 Min</string>
<string name="network_security">NETWORK &amp; SECURITY</string>
<string name="network_alarm_off">Network Alarm: OFF</string>
<string name="lobby_remote_on">Lobby Remote: ON</string>
<string name="beta_jni_off">Beta: JNI Embedded JVM: OFF</string>
<string name="twofa_disabled">2FA Status: Disabled</string>
<string name="enable_2fa">Enable 2FA</string>
<string name="set_2fa_password">Set 2FA Password</string>
<string name="biometrics">BIOMETRICS</string>
<string name="enable_biometric">Enable Biometric Unlock</string>
<string name="bio_resume">On App Resume / Screen Unlock</string>
<string name="bio_cold_start">On App Cold Start</string>
<string name="bio_server_click">Before Opening a Server</string>
<string name="bio_create_server">Before Creating a Server</string>
<string name="account">ACCOUNT</string>
<string name="loading">Loading...</string>
    <string name="dl_resolving_url">Resolving URL…</string>
    <string name="dl_connecting">Connecting…</string>
    <string name="dl_checking_api">Checking %1$s API…</string>
    <string name="dl_checking_mojang">Checking Mojang manifest…</string>
    <string name="dl_building_url">Building %1$s URL…</string>
    <string name="dl_found_build">Found %1$s build #%2$s</string>
    <string name="dl_found_version">Found %1$s %2$s</string>
    <string name="dl_downloading">Downloading… %1$s / %2$s MB</string>
    <string name="dl_done">✓ Server .jar downloaded! Press START now.</string>
    <string name="dl_manual_required">Manual install required for %1$s.\nPlace server.jar in: %2$s</string>
    <string name="dl_error_no_builds">No %1$s builds found for %2$s</string>
    <string name="dl_error_mojang">Version %1$s not found in Mojang manifest</string>
    <string name="dl_error_http">HTTP error %1$d</string>
    <string name="logout">Log Out</string>
    <string name="device_info">DEVICE &amp; APP INFO</string>
    <string name="danger_zone_desc">These actions cannot be undone</string>
    <string name="clear_docs">Clear Documents</string>
    <string name="clear_app_data">Clear App Data</string>
    <string name="support">SUPPORT</string>
    <string name="report_server">Report Server</string>
    <string name="report_bug">Report Bug</string>
    <string name="report_server_desc">Report a server for violating our Terms of Service.</string>
    <string name="report_bug_desc">Found a bug in the app? Let us know!</string>
    <string name="server_subdomain">Server Subdomain/ID</string>
    <string name="reason">Reason for report</string>
    <string name="report">REPORT</string>
    <string name="cancel">CANCEL</string>
    <string name="bug_description">Describe the bug...</string>
    <string name="report_submitted">Report submitted. Thank you!</string>
    <string name="error_server_not_found">Server not found.</string>
    <string name="error_not_logged_in">You must be logged in to report a bug.</string>
    <string name="error_report_failed">Failed to submit report.</string>
    <string name="mc_server_manager">Minecraft Server Manager</string>
    <string name="log_button">LOG</string>
    <string name="server_name_header">SERVER NAME</string>
    <string name="type_header">TYPE</string>
    <string name="ram_header">RAM</string>
    <string name="status_header">STATUS</string>
    <string name="no_servers_yet">No Servers Yet</string>
    <string name="create_first_server_desc">Tap the button below to create your first server</string>
    <string name="new_server_btn">＋ NEW SERVER</string>
    <string name="server_singular">\u0020SERVER</string>
    <string name="server_plural">\u0020SERVERS</string>
    <string name="plugin_installed_restart_needed">Plugin installed! Restart required.</string>
    <string name="restart">RESTART</string>
    <string name="status_info">STATUS &amp; INFO</string>
    <string name="uptime">UPTIME</string>
    <string name="online">ONLINE</string>
    <string name="connection">CONNECTION</string>
    <string name="join_address_java">JOIN ADDRESS (JAVA)</string>
    <string name="bedrock_port">BEDROCK PORT</string>
    <string name="installing">INSTALLING...</string>
    <string name="controls">CONTROLS</string>
    <string name="hard_reset">⚠ HARD RESET</string>
    <string name="copy_log">COPY LOG</string>
    <string name="console_fullscreen">Fullscreen</string>
    <string name="console_fullscreen_exit">Exit fullscreen</string>
    <string name="clear">CLEAR</string>
    <string name="server_info">SERVER INFO</string>
    <string name="ram_allocation">RAM ALLOCATION</string>
    <string name="allocated_ram">Allocated RAM</string>
    <string name="network_automation">NETWORK &amp; AUTOMATION</string>
    <string name="network_automation_desc">All network configurations happen fully automatically in the background as soon as the server starts.\n\nManual tunnel or DNS settings are no longer necessary, with the exception of an optional custom domain.</string>
    <string name="custom_domain">Join Address</string>
    <string name="custom_domain_desc">Configure your custom subdomain address.</string>
    <string name="set_domain">Set Domain</string>
    <string name="dns_record_desc">Please set the following DNS record:</string>
    <string name="verify_configuration">Verify Configuration</string>
    <string name="unverified">Unverified</string>
    <string name="bedrock_support">Bedrock Support</string>
    <string name="geyser_floodgate">Geyser &amp; Floodgate (Auto-Install)</string>
    <string name="voicechat_support">Voicechat Support</string>
    <string name="simple_voice_chat">Simple Voice Chat (Auto-Install)</string>
    <string name="gameplay_settings">GAMEPLAY SETTINGS</string>
    <string name="max_players">Max Players</string>
    <string name="difficulty">Difficulty</string>
    <string name="view_distance">View Distance</string>
    <string name="simulation_distance">Simulation Distance</string>
    <string name="online_mode_premium">Online Mode (Premium)</string>
    <string name="tab_dashboard">Dashboard</string>
    <string name="tab_console">Console</string>
    <string name="tab_files">Files</string>
    <string name="tab_settings">Settings</string>
    <string name="players_manage_title">MANAGE PLAYERS</string>
    <string name="players_online">ONLINE</string>
    <string name="players_offline_known">OFFLINE (Known)</string>
    <string name="players_none_known">No players known yet.</string>
    <string name="players_manage">MANAGE</string>
    <string name="eula_title">MINECRAFT EULA</string>
    <string name="support_tickets">Support Tickets</string>
    <string name="support_tickets_title">SUPPORT TICKETS</string>
    <string name="how_can_we_help">How can we help you today?</string>
    <string name="not_logged_in">Not Logged In</string>
    <string name="login_warning_desc">You must be logged in to create or view support tickets. Please go to the Account tab and log in.</string>
    <string name="praetor_update_title">App Update Available</string>
    <string name="praetor_update_message">Your KodaHosting app is outdated. A security and stability update is highly recommended to continue.</string>
    <string name="praetor_update_button">Update via Play Store</string>
    <string name="praetor_update_skip">Skip</string>
    <string name="praetor_title">P.R.A.E.T.O.R.</string>
    <string name="praetor_subtitle">PROTOCOL FOR RISK ASSESSMENT,\nENFORCEMENT &amp; TOTAL OVERSIGHT RESPONSE</string>
    <string name="extras_backups">Backups</string>
    <string name="extras_backup_mode">When should a backup be created?</string>
    <string name="extras_backup_none">No backups yet.</string>
    <string name="extras_backup_now">Back up now</string>
    <string name="extras_backups_subtitle">World, configs and plugins as one ZIP, stored next to the app.</string>
    <string name="extras_backup_hint">Restoring replaces the server folder with the chosen state. The server has to be stopped.</string>
    <string name="extras_backup_keep_label">Copies to keep</string>
    <string name="crisis_title">YOU ARE NOT ALONE</string>
    <string name="crisis_subtitle">You are BEING LOVED &lt;3</string>
    <string name="crisis_love_headline">Hey :) I\u2019m libredroid. I built this app , and I want you to be okay.</string>
    <string name="crisis_love_text">What you feel right now is real and heavy. But it is not forever, truly. You don\u2019t have to go through this alone. Your server can wait , you cannot be replaced \u2764\ufe0f</string>
    <string name="crisis_help_title">HELP IS HERE FOR YOU</string>
    <string name="crisis_hotlines">Germany (24/7, free): 0800 111 0 111 or 0800 111 0 222\nYouth hotline (Germany): 116 111\nChat counselling (under 25): krisenchat.de\nHelplines in your country: findahelpline.com\nAcute danger: call your local emergency number (112 in the EU)</string>
    <string name="crisis_call">Call 0800 111 0 111 (free, 24/7)</string>
    <string name="crisis_krisenchat">Write to krisenchat (under 25)</string>
    <string name="crisis_findhelp">Find a helpline in your country</string>
    <string name="crisis_discord">Talk to the community (Discord)</string>
    <string name="crisis_support">Write to me directly (support ticket)</string>
    <string name="crisis_continue">CONTINUE</string>
    <string name="crisis_rename_hint">Your server name can be changed at any time.</string>
        <string name="crisis_safe_text">Nothing happens, promise :) No ban, no block, your server stays. Nobody finds out about this screen. You don\u2019t have to explain anything &lt;3</string>
    <string name="mental_support">Mental support &lt;3</string>
</resources>